--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.21",
     "next": "14.2.2",
     "react": "^18",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18",
     "react-spinners": "^0.13.8"
   },
